my second commite. action section is done.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </header>
 
-<!-- 
+
     <main>
 
         <section class="Action">
@@ -39,7 +39,7 @@
         </section>
 
 
-
+<!-- 
         <div class="Users">
             <div class="users">
                 <h1> Joined Thousands of Productive Users </h1>
@@ -159,10 +159,10 @@
                 <button  class="btn" class="form-all-padding"> Get in Touch </button>
 
             </div>
-        </div>
+        </div> -->
 
         
-    </main> -->
+    </main>
 
 
 <!-- 
