--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-<!-- 
+
          <h2 class="what"> What our users say </h2>
 
         <div class="Reviews">
@@ -159,7 +159,7 @@
                 <button  class="btn" class="form-all-padding"> Get in Touch </button>
 
             </div>
-        </div>  -->
+        </div>  
 
         
     </main>
